--- a/Demos/ZavaRetailAgent/.env.example
+++ b/Demos/ZavaRetailAgent/.env.example
@@ -1,17 +1,18 @@
 # Azure Subscription and Resource Configuration
-AZURE_SUBSCRIPTION_ID=your-subscription-id-here
-AZURE_RESOURCE_GROUP=your-resource-group-name
-AZURE_LOCATION=your-azure-region
+AZURE_SUBSCRIPTION_ID=""
+AZURE_RESOURCE_GROUP=""
+AZURE_LOCATION=""
 
-# Azure AI Foundry Project Configuration
-AZURE_AI_PROJECT_NAME=your-project-name
-AZURE_AI_PROJECT_CONNECTION_STRING=https://your-resource-name.services.ai.azure.com/api/projects/your-project-name
+# Microsoft Foundry Project Configuration
+FOUNDRY_RESOURCE_NAME=""
+AZURE_AI_PROJECT_NAME=""
+AZURE_AI_PROJECT_CONNECTION_STRING=""
 
 # Azure OpenAI Configuration (for the agent model)
-AZURE_OPENAI_ENDPOINT=https://your-resource-name.openai.azure.com/
-AZURE_OPENAI_API_KEY=your-api-key-here
-AZURE_OPENAI_DEPLOYMENT_NAME=your-deployment-name
-AZURE_OPENAI_API_VERSION=2024-08-01-preview
+AZURE_OPENAI_ENDPOINT=""
+AZURE_OPENAI_API_KEY=""
+AZURE_OPENAI_DEPLOYMENT_NAME=""
+AZURE_OPENAI_API_VERSION=""
 
 # Model Settings
 # Temperature: Controls randomness (0.0 = deterministic, 1.0 = very creative)
@@ -20,6 +21,6 @@ TEMPERATURE=0.7
 TOP_P=0.95
 
 # MCP Server Configuration
-MCP_SERVER_URL=https://your-mcp-server-url.azurecontainerapps.io/mcp
-MCP_SERVER_NAME=retail-mcp-server
-MCP_SERVER_DESCRIPTION=Retail operations MCP server with 15 tools for user management, orders, products, and customer service
+MCP_SERVER_URL=""
+MCP_SERVER_NAME=""
+MCP_SERVER_DESCRIPTION=""
